        - Honor 'cupt::resolver::track-reasons' configuration option.
      - Worker:
        - APT mangles ':' chars in names of deb archives. Cupt doesn't do the
          same. So, to pick up debs downloaded by libapt, worker now generates
          symlinks from 'right' names to 'mangled' names whenever possible.
        - Move downloading stage to start of 'do_actions' method.
    - Config:
      - New configuration option 'cupt::resolver::track-reasons'.
    - Cache:
      - New free subroutine 'get_path_of_debian_copyright'.
      - When parsing release data, require first symbol of version to be digit.
  * doc:
    - cupt.1:
      - Renewed the list of supported APT configuration options.
      - Mentioned the way to send bug reports and IRC discussion channel.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Thu, 21 May 2009 11:49:18 +0300

cupt (0.1.3) unstable; urgency=low

  * debian/control:
    - Fixed misspelled Recommends 'liblocale-gettext-perl'.
    - Allow DM uploads.
  * cupt:
    - 'show' subcommand:
      - Show also source version if present.
    - 'changelog' subcommand:
      - Use source version for fetching remote changelogs if present. Fixes
        determining remote path for versions that had a binary-only rebuild(s).
    - 'policy' subcommand:
      - When called without arguments, print available Releases.
    - Exclude superfluous 'use Locale::gettext', Cupt::Core module do all
      needed manipulations to provide gettext. Thanks to
      David Broome <dbroome@gmail.com>. (Closes: #529167)
  * Cupt:
    - Cache:
      - New method 'get_binary_release_data'.
      - New method 'get_source_release_data'.
      - Include base URI in release info.
      - Installed versions of packages now have archive 'installed',
        codename 'now', vendor 'dpkg' in release info.
      - BinaryVersion:
        - New field 'source_package_version'. It's got filled when the source
          version for package differs from the binary one.