@@ -24,6 +24,8 @@ cupt (0.1.4) UNRELEASED; urgency=low
           same. So, to pick up debs downloaded by libapt, worker now generates
           symlinks from 'right' names to 'mangled' names whenever possible.
         - Move downloading stage to start of 'do_actions' method.
+        - Reverted "Don't introduce action loops when uniting 'remove' and 'unpack'
+          actions".
     - Config:
       - New configuration option 'cupt::resolver::track-reasons'.
     - Cache:
